# dive

./: .gitignore  README.md
task_1/: .dockerignore  .env.example  .gitignore  CREATE_ENV.md  Dockerfile  README.md  README_QUICKSTART.md  SETUP_UV.md  docker-compose.yml  pyproject.toml  setup.ps1
task_1/app/: __init__.py  config.py  database.py  graph.py  main.py  models.py  nodes.py  schemas.py  state.py  vectorstore.py
task_1/dataset/: test.csv  test_predictions.csv  train.csv
task_1/scripts/: generate_predictions.py  init_vectorstore.py
task_1/tests/: test_api.py
task_2/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
task_2/app/: __init__.py  config.py  database.py  graph.py  main.py  models.py  nodes.py  schemas.py  state.py
